# LM-Studio

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: build.yml
include/: Camera.hpp  GenUtil.hpp  ImGuiNotify.hpp  Skeleton.hpp  UContext.hpp  UPathRenderer.hpp  USequencer.hpp  UViewerApplication.hpp
include/glad/: glad.h
include/io/: BinIO.hpp  KeyframeIO.hpp  MdlIO.hpp  Skeleton.hpp  Util.hpp
include/util/: UUIUtil.hpp
lib/: CMakeLists.txt
src/: Camera.cpp  UContext.cpp  UPathRenderer.cpp  USequencer.cpp  UViewerApplication.cpp  glad.c  main.cpp
src/io/: BinIO.cpp  KeyframeIO.cpp  MdlIO.cpp  Skeleton.cpp  Util.cpp
